--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/dafc4220dc.js" crossorigin="anonymous"></script>
 
 
 </head>
@@ -19,35 +21,63 @@
     <!-- header section  -->
 
     <header style=" background: #FFF9F4">
+
         <!-- navigation section  -->
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
-                    </ul>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container d-flex">
+                <div>
+                    <a class="navbar-brand" href="#">
+                        <img class="img-fluid" src="icons/Logo.png" alt="" width="270" height="35">
+                    </a>
+                </div>
+                <div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link" href="#">Product</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
 
+        <!-- banner section  -->
 
+        <section class="container">
+            <div class="row justify-content-around align-items-center py-5">
+                <div class="col-lg-5 image-size order-lg-0 order-1">
+                    <img src="images/Group 33092.png" alt="">
+                </div>
+                <div class="col-lg-5 order-lg-1 order-0">
+                    <h1 class="fs-1 fw-bolder pb-3"><span class="text-warning">NIKE REACT
+                        </span> INFINITY RUN 2</h1>
+                    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis accusantium
+                        neque sequi?
+                    </P>
+
+                    <button type="button" class="btn d-flex justify-content-evenly align-items-center text-white"
+                        style="background: linear-gradient(180deg, #3D4FF3 0%, #3543BC 100%);">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="ps-3 py-1">buy now</span> </button>
+                </div>
+            </div>
+            </div>
+        </section>
 
     </header>
 
